# sonara

./: .env.example  .gitignore  README.md  README_TAURI_MIGRATE.md  index.html  package-lock.json  package.json  vite.config.js
python/: __init__.py  bridge.py  generate_key.py  license.py  stt_engine.py  transcribe.py
src/: App.jsx  main.jsx  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AdminModal.jsx  PricingModal.jsx
src/lib/: pickAudioNative.js
src/styles/: app.css
src/utils/: duration.js  invokeJson.js
web-version/: app.js  index.html  pricing.config.json  styles.css
