[package]
name = "sonara_tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "^2", features = [] }
